<resources>
    <string name="app_name">MindSharpener</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Instruction
    </string>
    <string name="textview1">
        Instruction
    </string>

    <string name="textview2">
        This is a simple mathematic games which is believed can train your brain. Two numbers are given randomly based on your level choice together with the operator. You just need to calculates the answer, write your answer and press check buttono. Every correct answer will give you 1 point while wrong answer will deduct 1 ponint.
    </string>

    <string name="textview3">
        Choose Level:
    </string>

    <string name="textview4">
        1
    </string>

    <string name="textview5">
        +
    </string>

    <string name="textview6">
        1
    </string>

    <string name="textview7">
        POINT :
    </string>

    <string name="textview8">
        0
    </string>
</resources>